tests/fixtures/invalid/min_list_bool.py
# Cannot call min() with List[int], Bool
x = min([1, 2, 3], True)
